# scratchers

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config  config.toml
benches/: audio.rs  basic_simd.rs  matrix_mul.ispc  matrix_mul.rs  matrix_mul.wgsl  sparse_vec.rs  threadpool.rs
benches/bench-base64/: TODO  base64.go  base64_amd64.go  base64_amd64.s  base64_decode_amd64.s  base64_encode_amd64.s  base64_test.go  go.mod  main.go  redzone.go
benches/bench-bits/: bits.cpp  bits.go  bits.rs  generate.py  go.mod
benches/bench-gzip/: go.mod  gzip_test.go
benches/bench-hsum/: go.mod  hsum.go  hsum_amd64.go  hsum_amd64.s  hsum_arm64.go  hsum_arm64.s  hsum_other.go  hsum_test.go  main.go
benches/bench-hsum/hsumcgo/: hsum_cgo.go  hsum_nocgo.go
benches/bench-proxy/: go.mod  main.go
benches/bench-sqlite/: sqlite.rs
benches/bench-x509/: ecserver.crt  ecserver.key  rsaserver.crt  rsaserver.key
benches/bench-x509/.fleet/: run.json
benches/bench-x509/client/: main.go
benches/bench-x509/server/: main.go
benches/shaders/: matrix_mul_common.wgsl  matrix_mul_common_vec4.wgsl  matrix_mul_v2.wgsl  matrix_mul_v2_loop8_unrolled.wgsl
benches/shaders/old/: matrix_mul_common.wgsl  matrix_mul_common_vec4.wgsl  matrix_mul_v1.wgsl  matrix_mul_v2_loop8.wgsl  matrix_mul_v2_loop8_unrolled_single_accum.wgsl
benches/shaders/old/newer_v2/: matrix_mul_v2_vec4.wgsl  matrix_mul_v2_vec8.wgsl  matrix_mul_v2_vec8_aligned.wgsl  matrix_mul_v3.wgsl
examples/: scratch.rs
go/bench-x509/: go.mod
go/tdata-decrypt/: go.sum  main.go
java-jmh/: .factorypath  .project  pom.xml
java-jmh/src/main/java/org/sample/: CollectBenchmark.java  IterBenchmark.java  ReflectCallBenchmark.java
llvm-div/: Makefile  div.ll  main.rs
src/: aligned_vec.rs  atomic_latch.rs  debug.rs  ispc_task.rs  lib.rs  tile_mul.rs  vulkan_gpu.rs
tdata-decrypt/: go.mod
xtask/: Cargo.toml  README.md
xtask/src/: android.rs  main.rs
