[package]
name = "scratchers"
version = "0.1.0"
authors = ["Oleg Andreev <ooandreev@yandex-team.ru>"]
edition = "2021"

[profile.bench]
debug = true

[profile.release]
debug = true

#[[bench]]
#name = "audio"
#harness = false

[[bench]]
name = "matrix_mul"
harness = false

#[[bench]]
#name = "sparse_vec"
#harness = false

#[[bench]]
#name = "threadpool"
#harness = false

[dependencies]
anyhow = "^1.0"
ash = { version = "^0.37", optional = true }
bytemuck = { version = "^1.12", features = ["derive"] }
crossbeam = "^0.8"
env_logger = "^0.10"
fyrox-sound = "^0.30"
futures = { version = "^0.3", features = ["thread-pool"] }
gpu-allocator = { version = "^0.22", features = ["vulkan"], optional = true }
hound = "^3.5"
libc = "^0.2"
log = "^0.4"
num_cpus = "^1.14"
oddio = "^0.6"
once_cell = "^1.16"
parking_lot = "^0.12"
rand = "^0.8"
rayon = "^1.6"
rodio = "^0.17"
rubato = "^0.12"
samplerate = "^0.2"
# Newest SDL2 required for building with NDK.
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["bundled"] }
# The version published at crates.io looks really old.
speexdsp-resampler = { git = "https://github.com/rust-av/speexdsp-rs", package = "speexdsp-resampler" }
tokio = { version = "^1.23", features = ["full"] }

[dev-dependencies]
criterion = "^0.4"
iai = "^0.1"

[build-dependencies]
anyhow = "^1.0"
glob = "^0.3"
cc = "^1.0"
env_logger = "^0.10"
log = "^0.4"

[features]
default = []
ispc = []
vulkan = ["dep:ash", "dep:gpu-allocator"]
