[package]
name = "scratchers"
version = "0.1.0"
authors = ["Oleg Andreev <ooandreev@yandex-team.ru>"]
edition = "2021"

[profile.bench]
debug = true

[profile.release]
debug = true

#[[bench]]
#name = "audio"
#harness = false

[[bench]]
name = "basic_simd"
harness = false

#[[bench]]
#name = "matrix_mul"
#harness = false
#
#[[bench]]
#name = "sparse_vec"
#harness = false
#
#[[bench]]
#name = "threadpool"
#harness = false

[dependencies]
anyhow = "^1.0"
ash = { version = "^0.37", optional = true }
bytemuck = { version = "^1.12", features = ["derive"] }
crossbeam = { version = "^0.8", optional = true }
fyrox-sound = { version = "0.31.0", optional = true }
futures = { version = "^0.3", features = ["thread-pool"], optional = true }
gpu-allocator = { version = "^0.22", features = ["vulkan"], optional = true }
hound = "^3.5"
libc = "^0.2"
log = "^0.4"
num_cpus = "^1.14"
oddio = { version = "^0.6", optional = true }
once_cell = "^1.16"
parking_lot = "^0.12"
rand = "^0.8"
rayon = { version = "^1.6", optional = true }
rodio = { version = "^0.17", optional = true }
rubato = { version = "^0.14", optional = true }
samplerate = { version = "^0.2", optional = true }
# Newest SDL2 required for building with NDK.
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["bundled"], optional = true }
# The version published at crates.io looks really old.
speexdsp-resampler = { git = "https://github.com/rust-av/speexdsp-rs", package = "speexdsp-resampler", optional = true }
tokio = { version = "^1.23", features = ["full"], optional = true }

[dev-dependencies]
criterion = "^0.5"
iai = "^0.1"

[build-dependencies]
anyhow = "^1.0"
glob = "^0.3"
cc = "^1.0"
env_logger = "^0.10"
log = "^0.4"

[features]
default = []
futures = ["dep:futures"]
fyrox-sound = ["dep:fyrox-sound", "rubato"]
ispc = ["dep:crossbeam", "dep:rayon"]
oddio = ["dep:oddio"]
rayon = ["dep:rayon"]
rodio = ["dep:rodio"]
rubato = ["dep:rubato"]
samplerate = ["dep:samplerate"]
sdl2 = ["dep:sdl2"]
speexdsp-resampler = ["dep:speexdsp-resampler"]
tokio = ["futures", "dep:tokio"]
vulkan = ["dep:ash", "dep:gpu-allocator"]

all-audio = ["fyrox-sound", "oddio", "rodio", "rubato", "samplerate", "sdl2", "speexdsp-resampler"]
all-matrix-mul = ["ispc", "rayon", "vulkan"]
all-threadpool = ["futures", "rayon", "tokio"]
all = ["all-audio", "all-matrix-mul", "all-threadpool"]
